# pyzone

./: .gitignore  README.md  cv_camera.py  hello_nuitka.py  mpcond_example.py  mpshmem_example.py  multicast_listener_example.py  multicast_sender_example.py  requirements.txt  test_my_cxx_module.py  test_my_rust_module.py
my_cxx_module/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
my_cxx_module/cmake/: QueryPythonForPybind11.cmake
my_cxx_module/src/my_cxx_module/: __init__.py
my_cxx_module/src/native/: module.cpp
my_rust_module/: Cargo.toml  pyproject.toml
my_rust_module/src/: lib.rs
