[project]
name = "my_cxx_module" # Name on PyPI
description = "An example of a native C++ extension for python3."
readme = { file="README.md", content-type="text/markdown" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ "name" = "Evgeny Proydakov", "email" = "proydakov.e.a@informatic.ru" }]
keywords = ["example", "addition", "subtraction", "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/tttapa/py-build-cmake" }
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.2.0,<9"]

[build-system]
requires = ["py-build-cmake~=0.5.0",]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
name = "my_cxx_module" # Import name
directory = "src"

[tool.py-build-cmake.sdist]
include = ["CMakeLists.txt", "src/*"]
exclude = []

[tool.py-build-cmake.cmake]
minimum_version = "3.25"
build_type = "Release"
source_path = "." # Containing CMakeLists.txt
args = ["-Wdev"]
build_args = ["-j"]
build_tool_args = []
install_args = ["--verbose"]
install_components = ["python_modules"]
options = {}
env = {}

[tool.py-build-cmake.linux.cmake] # Linux-specific options
generator = "Ninja Multi-Config"
config = ["Debug", "Release"]
options = { "CMAKE_DEBUG_POSTFIX" = "_d" }
env = { "CMAKE_PREFIX_PATH" = "${HOME}/.local" }

[tool.py-build-cmake.mac.cmake] # macOS-specific options
generator = "Ninja Multi-Config"
config = ["Debug", "Release"]
options = { "CMAKE_DEBUG_POSTFIX" = "_d" }

[tool.py-build-cmake.windows.cmake] # Windows-specific options
config = ["RelWithDebInfo", "Release"]
[tool.py-build-cmake.windows.cmake.options]
CMAKE_CXX_FLAGS_RELWITHDEBINFO = "/Zi /Ob0 /Od /RTC1"
CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO = "/INCREMENTAL:NO /OPT:REF /DEBUG:FULL"
CMAKE_RELWITHDEBINFO_POSTFIX = "_d"

[tool.py-build-cmake.stubgen]
args = ["-v"]
